--- a/src/pages/authors/[author]/[page].astro
+++ b/src/pages/authors/[author]/[page].astro
@@ -2,7 +2,7 @@
 // warning: This file is overwritten by Astro Accelerator
 
 // For listing all articles in this folder
-import { Cache, PostFiltering, PostOrdering, PostQueries, PostPaging } from 'astro-accelerator-utils';
+import { PostFiltering, PostOrdering, PostQueries, PostPaging } from 'astro-accelerator-utils';
 import { Translations, Lang } from '@util/Languages';
 import type { Page, MarkdownInstance } from 'astro';
 import { SITE, Frontmatter } from '@config';
@@ -32,45 +32,36 @@ frontmatter.pubDate = pubDate;
 const _ = Lang(lang);
 
 // Logic
-type CacheData = {
+type AuthorData = {
   posts: MarkdownInstance<Record<string, any>>[];
   authors: string[];
 }
 
-export async function getCacheData() {
-  const key = 'pages_authors_[author]_[page]';
+export async function getData() {
+  const sourcePosts = await Astro.glob('../../**/*.md');
+  const data: AuthorData = { posts: [], authors: []};
 
-  let cacheData: CacheData = await Cache.getItem(key);
+  data.posts = sourcePosts
+    .filter(PostFiltering.isListable)
+    .sort(PostOrdering.sortByPubDateDesc);
 
-  if (cacheData == null) {
-    const sourcePosts = await Astro.glob('../../**/*.md');
-    
-    cacheData = { posts: [], authors: []};
-
-    cacheData.posts = sourcePosts
-      .filter(PostFiltering.isListable)
-      .sort(PostOrdering.sortByPubDateDesc);
-
-    cacheData.posts.forEach(p => {
-      const auths: string[] = p.frontmatter.authors ?? [];
-      if (auths.length == 0) {
-        console.log('No authors found', p.url);
+    data.posts.forEach(p => {
+    const auths: string[] = p.frontmatter.authors ?? [];
+    if (auths.length == 0) {
+      console.log('No authors found', p.url);
+    }
+    auths.forEach(a => {
+      if (!data.authors.includes(a)) {
+        data.authors.push(a);
       }
-      auths.forEach(a => {
-        if (!cacheData.authors.includes(a)) {
-          cacheData.authors.push(a);
-        }
-      });
     });
+  });
     
-    await Cache.setItem(key, cacheData);
-  }
-
-  return cacheData;
+  return data;
 }
 
 export async function getStaticPaths({ paginate }: any) {
-  let data = await getCacheData();
+  let data = await getData();
 
   return data.authors.map(a => {
     const filtered = data.posts.filter(p => {
