--- a/src/pages/report/missing-banner.astro
+++ b/src/pages/report/missing-banner.astro
@@ -1,7 +1,9 @@
 ---
-import { PostQueries, PostOrdering } from 'astro-accelerator-utils';
+import { PostQueries, PostOrdering, UrlFormatter } from 'astro-accelerator-utils';
+import { SITE } from '@config';
 
 // Logic
+const urlFormatter = new UrlFormatter(SITE.url);
 const allPages = await PostQueries.getPages();
 const missingBanner = allPages.filter(p => p.frontmatter.bannerImage == null && p.frontmatter.layout != 'src/layouts/Redirect.astro');
 const pageCount = missingBanner.length;
@@ -25,7 +27,7 @@ const pages = missingBanner.sort(PostOrdering.sortByPubDateDesc).slice(0, Math.m
             </thead>
         {pages.map(p => 
         <tr>
-            <td><a href={ p.url }>{ p.frontmatter.title }</a></td>
+            <td><a href={ urlFormatter.addSlashToAddress(p.url) }>{ p.frontmatter.title }</a></td>
             <td>{ p.frontmatter.pubDate }</td>
             <td>{ p.frontmatter.modDate }</td>
         </tr>
