--- a/src/themes/accelerator/components/Authors.astro
+++ b/src/themes/accelerator/components/Authors.astro
@@ -1,5 +1,5 @@
 ---
-import { Dates, Urls, PostQueries } from 'astro-accelerator-utils';
+import { PostQueries, DateFormatter, UrlFormatter } from 'astro-accelerator-utils';
 import { SITE, Frontmatter } from '@config';
 import { Translations, Lang } from '@util/Languages';
 import { getImageInfo } from '@util/custom-markdown.mjs';
@@ -15,6 +15,8 @@ const { lang, frontmatter } = Astro.props as Props;
 const _ = Lang(lang);
 
 // Logic
+const dateFormatter = new DateFormatter(SITE.dateOptions);
+const urlFormatter = new UrlFormatter(SITE.url);
 const authorList = await PostQueries.getAuthors(frontmatter);
 
 // Get image info
@@ -35,16 +37,16 @@ const authorImage = authorList?.image?.src
   <div class="author-info">
     <span>{ _(Translations.post.written_by) }
       {authorList.mainAuthor &&
-        <a href={ Urls.addSlashToAddress(authorList.mainAuthor.url, SITE) + '1/' } itemprop="author">{ authorList.mainAuthor.frontmatter.title }</a>
+        <a href={ urlFormatter.addSlashToAddress(authorList.mainAuthor.url) + '1/' } itemprop="author">{ authorList.mainAuthor.frontmatter.title }</a>
       }{authorList.contributors.map((writer) => (
-        <a href={ Urls.addSlashToAddress(writer.url, SITE) + '1/' } itemprop="contributor">{ writer.frontmatter.title }</a>
+        <a href={ urlFormatter.addSlashToAddress(writer.url) + '1/' } itemprop="contributor">{ writer.frontmatter.title }</a>
       ))}.
       <br /><time datetime={ frontmatter.pubDate.toString() } itemprop="datePublished">
-      { Dates.formatDate(frontmatter, lang, SITE) }
+      { dateFormatter.formatDate(frontmatter.pubDate, lang) }
       </time>
       {frontmatter.modDate &&
       <br /><time datetime={ frontmatter.modDate.toString() } itemprop="dateModified">
-        { _(Translations.post.last_modified) } { Dates.formatModifiedDate(frontmatter, lang, SITE) }
+        { _(Translations.post.last_modified) } { dateFormatter.formatDate(frontmatter.modDate, lang) }
       </time>
       }
     </span>
