--- a/src/pages/report/oldest-content.astro
+++ b/src/pages/report/oldest-content.astro
@@ -1,7 +1,9 @@
 ---
-import { PostQueries, PostOrdering, PostFiltering } from 'astro-accelerator-utils';
+import { PostQueries, PostOrdering, PostFiltering, UrlFormatter } from 'astro-accelerator-utils';
+import { SITE } from '@config';
 
 // Logic
+const urlFormatter = new UrlFormatter(SITE.url);
 const allPages = await PostQueries.getPages();
 const pageCount = allPages.length;
 const pages = allPages.sort(PostOrdering.sortByModDate).slice(0, Math.min(50, pageCount));
@@ -26,7 +28,7 @@ const pages = allPages.sort(PostOrdering.sortByModDate).slice(0, Math.min(50, pa
         <tr>
             <td>
                 {PostFiltering.isListable(p) && (
-                    <a href={ p.url }>{ p.frontmatter.title }</a>
+                    <a href={ urlFormatter.addSlashToAddress(p.url) }>{ p.frontmatter.title }</a>
                 )}
                 {PostFiltering.isListable(p) == false && (
                     <span>{ p.frontmatter.title }</span>
