--- a/src/themes/accelerator/components/FooterItem.astro
+++ b/src/themes/accelerator/components/FooterItem.astro
@@ -1,5 +1,5 @@
 ---
-import type { NavPage } from '@util/TempNavPage';
+import type { NavPage } from 'astro-accelerator-utils/types/NavPage';
 
 // Properties
 type Props = {
