--- a/src/themes/accelerator/components/HtmlHead.astro
+++ b/src/themes/accelerator/components/HtmlHead.astro
@@ -1,5 +1,5 @@
 ---
-import { Markdown, Urls } from 'astro-accelerator-utils';
+import { Markdown, UrlFormatter } from 'astro-accelerator-utils';
 import { SITE, OPEN_GRAPH, HEADER_SCRIPTS, Frontmatter } from '@config';
 
 // Properties
@@ -11,11 +11,12 @@ type Props = {
 const { frontmatter } = Astro.props;
 
 // Logic
+const urlFormatter = new UrlFormatter(SITE.url);
 const imageSrc = frontmatter.bannerImage?.src ?? OPEN_GRAPH.image.src;
 const imageAlt = frontmatter.bannerImage?.alt ?? OPEN_GRAPH.image.alt;
 const robots = frontmatter.robots ?? 'index, follow';
 const canonicalImageSrc = new URL(imageSrc, Astro.site);
-const canonicalURL =  Urls.addSlashToUrl(new URL(Astro.url.pathname, Astro.site + SITE.subfolder));
+const canonicalURL =  urlFormatter.addSlashToUrl(new URL(Astro.url.pathname, Astro.site + SITE.subfolder));
 const socialTitle = await Markdown.getTextFrom(frontmatter.title);
 const title = `${ socialTitle } | ${ SITE.title }`;
 ---
