--- a/src/themes/accelerator/components/NavigationItem.astro
+++ b/src/themes/accelerator/components/NavigationItem.astro
@@ -1,7 +1,7 @@
 ---
+import { UrlFormatter } from 'astro-accelerator-utils';
+import type { NavPage } from 'astro-accelerator-utils/types/NavPage';
 import { SITE } from '@config';
-import type { NavPage } from '@util/TempNavPage';
-import { Urls } from 'astro-accelerator-utils';
 
 // Properties
 type Props = {
@@ -9,10 +9,13 @@ type Props = {
   page: NavPage
 };
 const { lang, page } = Astro.props as Props;
+
+// Logic
+const urlFormatter = new UrlFormatter(SITE.url);
 ---
 {(page.children.length == 0) && (
 <li>
-  <a href={ Urls.addSlashToAddress(page.url, SITE) } aria-current={ page.ariaCurrent } rel={ page.rel }>{ page.title }</a>
+  <a href={ urlFormatter.addSlashToAddress(page.url) } aria-current={ page.ariaCurrent } rel={ page.rel }>{ page.title }</a>
 </li>
 )}
 {(page.children.length > 0) && (
