--- a/src/pages/report/missing-banner.astro
+++ b/src/pages/report/missing-banner.astro
@@ -1,10 +1,12 @@
 ---
-import { PostQueries, PostOrdering, UrlFormatter } from 'astro-accelerator-utils';
+import { PostOrdering, Posts, UrlFormatter } from 'astro-accelerator-utils';
 import { SITE } from '@config';
 
 // Logic
+const posts = new Posts();
 const urlFormatter = new UrlFormatter(SITE.url);
-const allPages = await PostQueries.getPages();
+
+const allPages = posts.all();
 const missingBanner = allPages.filter(p => p.frontmatter.bannerImage == null && p.frontmatter.layout != 'src/layouts/Redirect.astro');
 const pageCount = missingBanner.length;
 const pages = missingBanner.sort(PostOrdering.sortByPubDateDesc).slice(0, Math.min(50, pageCount));
