--- a/src/pages/report/missing-meta.astro
+++ b/src/pages/report/missing-meta.astro
@@ -1,10 +1,12 @@
 ---
-import { PostQueries, PostOrdering, UrlFormatter } from 'astro-accelerator-utils';
+import { PostOrdering, Posts, UrlFormatter } from 'astro-accelerator-utils';
 import { SITE } from '@config';
 
 // Logic
+const posts = new Posts();
 const urlFormatter = new UrlFormatter(SITE.url);
-const allPages = await PostQueries.getPages();
+
+const allPages = posts.all();
 const missingMeta = allPages.filter(p => (p.frontmatter.keywords == null || p.frontmatter.description == null) && p.frontmatter.layout != 'src/layouts/Redirect.astro');
 const pageCount = missingMeta.length;
 const pages = missingMeta.sort(PostOrdering.sortByPubDateDesc).slice(0, Math.min(50, pageCount));
