--- a/src/pages/report/missing-pubdate.astro
+++ b/src/pages/report/missing-pubdate.astro
@@ -1,10 +1,12 @@
 ---
-import { PostQueries, UrlFormatter } from 'astro-accelerator-utils';
+import { Posts, UrlFormatter } from 'astro-accelerator-utils';
 import { SITE } from '@config';
 
 // Logic
+const posts = new Posts();
 const urlFormatter = new UrlFormatter(SITE.url);
-const allPages = await PostQueries.getPages();
+
+const allPages = posts.all();
 const missingMeta = allPages.filter(p => (p.frontmatter.pubDate == null && p.frontmatter.layout != 'src/layouts/Redirect.astro'));
 const pageCount = missingMeta.length;
 const pages = missingMeta.slice(0, Math.min(50, pageCount));
