--- a/src/pages/report/oldest-content.astro
+++ b/src/pages/report/oldest-content.astro
@@ -1,10 +1,12 @@
 ---
-import { PostQueries, PostOrdering, PostFiltering, UrlFormatter } from 'astro-accelerator-utils';
+import { PostOrdering, PostFiltering, Posts, UrlFormatter } from 'astro-accelerator-utils';
 import { SITE } from '@config';
 
 // Logic
+const posts = new Posts();
 const urlFormatter = new UrlFormatter(SITE.url);
-const allPages = await PostQueries.getPages();
+
+const allPages = posts.all();
 const pageCount = allPages.length;
 const pages = allPages.sort(PostOrdering.sortByModDate).slice(0, Math.min(50, pageCount));
 ---
