--- a/src/themes/accelerator/components/Taxonomy.astro
+++ b/src/themes/accelerator/components/Taxonomy.astro
@@ -1,5 +1,5 @@
 ---
-import { Cache, Posts, Taxonomy, UrlFormatter } from 'astro-accelerator-utils';
+import { Accelerator } from 'astro-accelerator-utils';
 import type { Frontmatter } from 'astro-accelerator-utils/types/Frontmatter';
 import { Translations, Lang } from '@util/Languages';
 import { SITE } from '@config';
@@ -15,15 +15,12 @@ const { lang, frontmatter } = Astro.props as Props;
 const _ = Lang(lang);
 
 // Logic
-const cache = new Cache(SITE.cacheMaxAge);
-const posts = new Posts(cache);
-const urlFormatter = new UrlFormatter(SITE.url);
-const taxonomy = new Taxonomy(cache, posts, urlFormatter);
+const accelerator = new Accelerator(SITE);
 
 const categories = frontmatter.categories ?? [];
 const tags = frontmatter.tags ?? [];
 
-const links = taxonomy.links(Translations, _, SITE.subfolder);
+const links = accelerator.taxonomy.links(Translations, _, SITE.subfolder);
 const hasTaxonomy = (categories.length + tags.length) > 0;
 ---
 {hasTaxonomy && (
