--- a/src/pages/report/taxonomy.astro
+++ b/src/pages/report/taxonomy.astro
@@ -1,5 +1,5 @@
 ---
-import { Cache, Posts, Taxonomy, UrlFormatter } from 'astro-accelerator-utils';
+import { Accelerator } from 'astro-accelerator-utils';
 import { Lang } from '@util/Languages';
 import { Translations } from '@util/Languages';
 import { SITE } from '@config';
@@ -8,13 +8,10 @@ import { SITE } from '@config';
 const _ = Lang('en');
 
 // Logic
-const cache = new Cache(SITE.cacheMaxAge);
-const posts = new Posts(cache);
-const urlFormatter = new UrlFormatter(SITE.url);
-const taxonomy = new Taxonomy(cache, posts, urlFormatter);
+const accelerator = new Accelerator(SITE);
 
-const links = taxonomy.links(Translations, _, SITE.subfolder);
-const entries = taxonomy.all();
+const links = accelerator.taxonomy.links(Translations, _, SITE.subfolder);
+const entries = accelerator.taxonomy.all();
 ---
 <!doctype html>
 <html>
