Use top-level layout

--- a/src/pages/authors/[author]/[page].astro
+++ b/src/pages/authors/[author]/[page].astro
@@ -8,7 +8,7 @@ import type { MarkdownInstance } from 'astro-accelerator-utils/types/Astro';
 import type { Page } from 'astro';
 import { Translations, Lang } from '@util/Languages';
 import { SITE } from '@config';
-import Default from '@layouts/Default.astro';
+import Default from 'src/layouts/Default.astro';
 import ArticleList from '@components/ArticleList.astro';
 import PagingLinks from '@components/PagingLinks.astro';
 
